--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,7 @@
         android:icon="@drawable/healthlog"
         android:theme="@style/CustomActionBarTheme">
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+        <activity android:name=".MainActivity" android:label="@string/app_name"
             android:icon="@drawable/healthlog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,20 +34,7 @@
         </activity>
 
         <activity android:name=".CollectionDemoActivity" android:label="@string/demo_collection"
-            android:icon="@drawable/healthlog">
-
-            </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name">
-
-            </activity>
-
-        <activity
-            android:name=".RegisterActivity"
-            android:label="Register Activity">
-            </activity>
-
+            android:icon="@drawable/healthlog"/>
 
     </application>
 </manifest>
