--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
         }
     }
 }
-    dependencies {
-        compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile 'com.android.support:appcompat-v7:21.0.3'
-        compile 'com.android.support:support-v4:21.0.3'
-
-    }
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile files('src/main/libs/volley.jar')
+}
