--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 04 11:48:47 GMT 2015
-sdk.dir=/Users/boyang/Library/Android/sdk
+#Mon Mar 09 23:06:41 GMT 2015
+sdk.dir=C\:\\Users\\Boyang\\AppData\\Local\\Android\\sdk
